Allow line breaks on mobile but prevent breaking inside 'ブラックベリー'

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ img {
 
 .hero-content {
     color: #fff;
-    max-width: 1000px;
+    max-width: 800px;
     padding: 0 20px;
     z-index: 1;
 }
@@ -519,11 +519,5 @@ img {
     .btn-hero {
         padding: 12px 30px;
         font-size: 1rem;
-    }
-}
-
-@media (max-width: 580px) {
-    .hero-title {
-        font-size: 5.3vw;
     }
 }
